<resources>
    <string name="app_name">Terbang Aja</string>
    <string name="text_title_tab_home">Beranda</string>
    <string name="text_title_tab_history">Riwayat</string>
    <string name="text_title_tab_notification">Notifikasi</string>
    <string name="text_title_tab_account">Akun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_notification">Notifikasi</string>
    <string name="text_account">Akun</string>
    <string name="text_edit_profile">Ubah Profil</string>
    <string name="text_logout">Keluar Akun</string>
    <string name="text_account_setting">Pengaturan Akun</string>
    <string name="text_greeting">Hai, Mau Kemana?</string>
    <string name="selamat_datang_di_terbangaja_aplikasi_pembelian_tiket_pesawat_tercanggih_yang_pernah_anda_temui">Selamat datang di TerbangAja, aplikasi pembelian tiket pesawat tercanggih yang pernah Anda temui!</string>
    <string name="dengan_fitur_pencarian_kami_yang_canggih_temukan_penerbangan_sesuai_dengan_preferensi_anda_dengan_mudah">Dengan fitur pencarian kami yang canggih, temukan penerbangan sesuai dengan preferensi Anda dengan mudah.</string>
    <string name="nikmati_pengalaman_berbelanja_tiket_pesawat_yang_mudah_dan_menyenangkan_dengan_terbangaja">Nikmati pengalaman berbelanja tiket pesawat yang mudah dan menyenangkan dengan TerbangAja.</string>
    <string name="text_login_title">Masuk</string>
    <string name="text_hint_email">Email </string>
    <string name="text_hint_password">Password</string>
    <string name="text_email_title">Email / Nomor Telepon</string>
    <string name="text_reset_password_title">Lupa Kata Sandi</string>
    <string name="text_button_login">Masuk</string>
    <string name="text_not_register">Belum punya akun?</string>
    <string name="text_nav_to_register">Daftar Di Sini</string>
    <string name="text_reset_password_header">Reset Password</string>
    <string name="text_round_trip">Pulang-Pergi?</string>
    <string name="text_depart">Berangkat</string>
    <string name="text_passenger">Penumpang</string>
    <string name="text_class">Kelas</string>
    <string name="text_return">Pulang</string>
    <string name="text_select_date">Pilih Tanggal</string>
    <string name="text_search_airline">Cari Penerbangan</string>
    <string name="text_destination">Destinasi Favorit</string>
    <string name="text_reset_info">Masukkan email yang terhubung dengan akun Anda.\nKami akan mengirimkan tautan untuk mengatur ulang kata sandi.</string>
    <string name="text_register_title">Daftar</string>
    <string name="text_hint_name">Nama Lengkap</string>
    <string name="text_hint_telp">Telepon</string>
    <string name="text_button_daftar">Daftar</string>
    <string name="text_have_account">Sudah punya akun?</string>
    <string name="text_nav_to_login">Masuk di sini</string>
    <string name="text_hint_confirm_password">Ulangi Password</string>
    <string name="text_button_send">Kirim</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Email tidak valid</string>
    <string name="text_error_password_empty">Password tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Password harus lebih dari 8 karakter</string>
    <string name="text_password_does_not_match">Password tidak cocok</string>
    <string name="text_otp_view">Ketik 6 digit code yang dikirimkan ke Email anda</string>
    <string name="text_otp_title">Masukkan OTP</string>
    <string name="text_send_otp_timer">Kirim Ulang OTP dalam %1$s detik</string>
    <string name="text_send_otp">Kirim Ulang OTP</string>
    <string name="text_arrival">Kedatangan</string>
    <string name="text_dash">-</string>
    <string name="text_departure">Keberangkatan</string>
    <string name="text_choose">Pilih</string>
    <string name="text_total">Total</string>
    <string name="text_history">Riwayat Pesanan</string>
    <string name="text_booking_code">Kode Booking:</string>
    <string name="text_class_dot">Kelas:</string>
    <string name="text_detail_price">Rincian Harga</string>
    <string name="text_to_payment">Lanjut Pembayaran</string>
    <string name="text_error_name_empty">Nama tidak boleh kosong</string>
    <string name="text_error_telp_empty">Nomor Telepon tidak boleh kosong</string>
    <string name="text_save">Simpan</string>
    <string name="text_under_2_years">(2 Tahun Kebawah)</string>
    <string name="text_baby">Balita</string>
    <string name="text_2_to_11_years">(2 - 11 Tahun)</string>
    <string name="text_children">Anak-Anak</string>
    <string name="text_over_12_years">(12 Tahun Keatas)</string>
    <string name="text_adult">Dewasa</string>
    <string name="text_economic">Ekonomi</string>
    <string name="text_premium_economic">Premium Ekonomi</string>
    <string name="text_business">Bisnis</string>
    <string name="text_first_class">First Class</string>
    <string name="total">TOTAL</string>
    <string name="text_week_mode">Week Mode</string>
    <string name="text_email_sent">Email telah dikirim</string>
    <string name="text_check_email_sent">Silahkan cek email Anda</string>
    <string name="text_button_confirm">Oke</string>
    <string name="text_empty_data">Data tidak ada!</string>
    <string name="no_internet_connection">Jaringan Bermasalah</string>
    <string name="error_occures">Terjadi Kesalahan</string>
    <string name="no_search_result">Tidak ada hasil pencarian</string>
    <string name="date_departure_title">Tanggal keberangkatan</string>
    <string name="date_return_title">Tanggal Kepulangan</string>
    <string name="result_date_departure">Belum dipilih</string>
    <string name="month">Desember, 2023</string>
    <string name="year">2023</string>
    <string name="format_date">dd MMMM yyyy</string>
    <string name="format_month_year">MMMM, yyyy</string>
    <string name="text_div">-</string>
    <string name="text_penumpang">%1$s Penumpang</string>
    <string name="text_empty_top">Maaf, pencarian Anda tidak ditemukan</string>
    <string name="text_empty_bottom">Coba cari perjalanan lainnya!</string>
    <string name="text_informasi">Informasi :</string>
    <string name="text_no_login">Maaf, Anda harus login terlebih dahulu</string>
    <string name="text_btn_no_login">Menuju ke Halaman Login</string>
    <string name="text_title_seat_back">)</string>
    <string name="text_seat_column_a">A</string>
    <string name="text_seat_column_b">B</string>
    <string name="text_seat_column_c">C</string>
    <string name="text_seat_column_d">D</string>
    <string name="text_seat_column_e">E</string>
    <string name="text_seat_column_f">F</string>
    <string name="text_title_detail_ticket">Pilihan Penerbangan</string>
    <string name="text_btn_checkout">Lanjut Pembayaran</string>
    <string name="rincian_harga">Rincian Harga</string>
    <string name="text_title_checkout">Rincian Penerbangan</string>
    <string name="text_orang_dewasa">%1$s Orang Dewasa</string>
    <string name="text_anak_anak">%1$s Anak-Anak</string>
    <string name="text_bayi">%1$s Bayi</string>
    <string name="lanjut_isi_data">Lanjut isi Data</string>
    <string name="seats_available">%1$s - %2$s Seats Available</string>
    <string name="text_div_space">" - "</string>
    <string name="text_filter">Filter</string>
    <string name="text_Loading">Loading . . . </string>
    <string name="text_btn_beranda">Beranda</string>
    <string name="lanjut_isi_kursi">Lanjut isi kursi</string>
    <string name="id_label">ID:</string>
    <string name="name_label">Nama Penumpang:</string>
    <string name="adult_passenger_format">%1$d Dewasa</string>
    <string name="child_passenger_format">%1$d Anak-Anak</string>
    <string name="baby_passenger_format">%1$d Bayi</string>
    <string name="n_a">N/A</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="pending">Pending</string>
    <string name="text_need_method">Need Method</string>
    <string name="text_expired">Expired</string>
    <string name="text_detail_history">Rincian Penerbangan</string>
    <string name="return_to_main">Kembali ke halaman utama</string>
    <string name="name">Name</string>
    <string name="name_profile">name_profile</string>
    <string name="email">Email</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="nomor_hp_edit_profile">nomor_hp</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="success_change_profile">Success Change Profile</string>
    <string name="profile">Profile</string>
    <string name="name_profile_akun">Name</string>
    <string name="email_gmail_com_akub">Email@gmail.com</string>
    <string name="no_hp_085159940923">085159940923</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="harap_isi_destinasi_tujuan_anda">Harap isi destinasi tujuan anda</string>
    <string name="harap_isi_lokasi_anda">Harap isi lokasi anda</string>
    <string name="harap_isi_lokasi_dan_tujuan_anda">Harap isi Lokasi dan tujuan anda</string>
    <string name="isi_data_terlebih_dahulu">Isi data terlebih dahulu</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="histori_pencarian">Histori Pencarian</string>
    <string name="minimal_1_orang_dewasa">Minimal 1 orang dewasa</string>
    <string name="apakah_anda_yakin_ingin_keluar_dari_akun">Apakah Anda yakin ingin keluar dari akun?</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf, Anda harus login terlebih dahulu</string>
    <string name="menuju_ke_halaman_login">Menuju ke Halaman Login</string>
    <string name="default_price">Rp0,00</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="text_date">%1$s - %2$s</string>
    <string name="text_arrival_date">%1$s %2$s %3$s</string>
    <string name="text_flight_information">Baggage %1$s Kg, Cabin baggage %2$s Kg, In Flight Entertainment</string>
    <string name="format_duration">%2dJ : %2dM</string>
    <string name="format_time">%02d : %02d</string>
    <string name="text_search_result">%1$s\n%2$s, %3$s</string>
    <string name="mohon_isi_data_dengan_lengkap">Mohon isi data dengan lengkap</string>
    <string name="title_biodata_penumpang">Biodata Penumpang</string>
    <string name="nomor_telepon_tidak_boleh_kosong">Nomor telepon tidak boleh kosong</string>
    <string name="nomor_telepon_tidak_boleh_kurang_dari_11_digit">Nomor telepon tidak boleh kurang dari 11 digit</string>
    <string name="nomor_telepon_tidak_boleh_lebih_dari_13_digit">Nomor telepon tidak boleh lebih dari 13 digit</string>
    <string name="profile_data">Profile Data</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="anda_hanya_mencari_tiket_untuk_pergi">Anda hanya mencari tiket untuk pergi</string>
    <string name="tiket_pulang_yang_anda_pilih_kosong">Tiket Pulang Yang Anda Pilih Kosong</string>
    <string name="silahkan_pilih_tiket_pulang">Silahkan Pilih Tiket Pulang</string>
    <string name="silahkan_pilih_tiket_pergi">Silahkan Pilih Tiket Pergi</string>
    <string name="silahkan_pilih_tiket">Silahkan Pilih Tiket</string>
    <string name="tiket_pergi_yang_anda_pilih_kosong">Tiket Pergi Yang Anda Pilih Kosong</string>
    <string name="text_departure_choice">Departure</string>
    <string name="text_return_choice">Return</string>
    <string name="text_header_destination"><![CDATA[%1$s > %2$s]]></string>
    <string name="text_filter_condition">%1$s - %2$s</string>
</resources>